qc pass: l3evpns egress route filtering with routemap
qc pass: l3evpns ingress route filtering with routemap with soft-reconfig
qc pass: l3evpns egress route filtering with routemap with soft-reconfig
qc pass: l3evpns ingress route filtering with routepolicy
qc pass: l3evpns egress route filtering with routepolicy
qc pass: l3evpns ingress route filtering with routepolicy with soft-reconfig
qc pass: l3evpns egress route filtering with routepolicy with soft-reconfig
qc pass: otherl3evpns ingress route filtering with routemap
qc pass: otherl3evpns egress route filtering with routemap
qc pass: otherl3evpns ingress route filtering with routemap with soft-reconfig
qc pass: otherl3evpns egress route filtering with routemap with soft-reconfig
qc pass: otherl3evpns ingress route filtering with routepolicy
qc pass: otherl3evpns egress route filtering with routepolicy
qc pass: otherl3evpns ingress route filtering with routepolicy with soft-reconfig
qc pass: otherl3evpns egress route filtering with routepolicy with soft-reconfig
---------------------------------- 2023-11-02 19:53:49 23.11.2
todo: tocustomer aggregator matchers to route-map/policy
---------------------------------- 2023-11-05 14:59:21 23.11.5
no qc pass: ebgp with ttl-security
no qc pass: ibgp with ttl-security
failed: ibgp with ttl-security
failed: ebgp with ttl-security
---------------------------------- 2023-11-05 17:05:10 23.11.5
no failed: ebgp with ttl-security
no failed: ibgp with ttl-security
qc pass: ibgp with ttl-security
qc pass: ebgp with ttl-security
---------------------------------- 2023-11-07 15:57:06 23.11.7
no qc pass: ebgp with bfd
failed: ebgp with bfd
---------------------------------- 2023-11-07 16:12:49 23.11.7
no failed: ebgp with bfd
qc pass: ebgp with bfd
---------------------------------- 2023-11-07 19:01:13 23.11.7
todo: rfc9491 nsh in ip
---------------------------------- 2023-11-07 22:39:08 23.11.7
qc pass: nsh over ipv4 tunnel
qc pass: nsh over ipv6 tunnel