@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.11.8-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-08 06:06:24, took 00:12:57, with 80 workers, on 3284 cases, 0 failed, 0 traces, 11 retries
+-;-;-;2023-11-08 14:17:22, took 00:12:01, with 80 workers, on 3284 cases, 0 failed, 0 traces, 4 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
