@@ -3282,8 +3282,6 @@ qc pass: socks4 server
 qc pass: socks5 server
 qc pass: tacacs server
 qc pass: udp forwarder server
-todo: rfc9491 nsh in ip
-todo: tocustomer aggregator matchers to route-map/policy
 todo: vdc to have local, connect as sdn autocreated
 todo: generalise server access- knobs
 todo: honeypot to wireformat, decode
@@ -3298,7 +3296,6 @@ todo: consider draft-ietf-idr-performance-routing
 todo: ioam as rfc9452
 todo: dlep as rfc8175
 todo: flash ext-delete also to commander
-todo: commander to have selection
 todo: commander to get away the cursor
 todo: player queue up down add-again
 todo: openflow to have 2 label support and stack to p4lang
