@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.11.8-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-11-08 06:06:24, took 00:12:57, with 80 workers, on 3284 cases, 0 failed, 0 traces, 11 retries<br/>
+tested: 2023-11-08 14:17:22, took 00:12:01, with 80 workers, on 3284 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
