@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter-rare v23.11.7-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-07 22:57:48, took 00:07:19, with 60 workers, on 434 cases, 0 failed, 0 traces, 0 retries
+-;-;-;freeRouter-rare v23.11.8-cur, done by sprscc13@mr.n0b0dy.
+-;-;-;2023-11-08 14:26:37, took 00:08:59, with 60 workers, on 434 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl01.tst;p4lang-acl01.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl02.tst;p4lang-acl02.tst;success;p4lang: ingress access list
