@@ -14,8 +14,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter-rare v23.11.7-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-11-07 22:57:48, took 00:07:19, with 60 workers, on 434 cases, 0 failed, 0 traces, 0 retries<br/>
+release: freeRouter-rare v23.11.8-cur, done by sprscc13@mr.n0b0dy.<br/>
+tested: 2023-11-08 14:26:37, took 00:08:59, with 60 workers, on 434 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
